# gst-instruments

./: .clang-format  .gitignore  AUTHORS  Makefile  Makefile.am  README.md  autogen.sh  configure-static.h  configure.ac  meson.build  meson_options.txt
data/: Makefile  Makefile.am  meson.build
instruments/: Makefile  Makefile.am  formatters.c  formatters.h  gst-report-1.0  gst-report.c  gst-top-1.0  gst-top.c  gst-trace-parser.c  gst-trace-parser.h  gstelementheadstone.c  gstelementheadstone.h  gstgraveyard.c  gstgraveyard.h  gsttaskheadstone.c  gsttaskheadstone.h
libs/gst/: meson.build
libs/gst/intercept/: Makefile  Makefile.am  gstintercept.c  gstintercept.h  intercept.c  intercept.h  meson.build  trace.c  trace.h
libs/gst/trace/: entry.c  entry.h  gstelementheadstone.c  gstelementheadstone.h  gstentry.c  gstentry.h  gstgraveyard.c  gstgraveyard.h  gstpadheadstone.c  gstpadheadstone.h  gsttaskheadstone.c  gsttaskheadstone.h  gsttrace.c  gsttrace.h  gsttraceentry.c  gsttraceentry.h  meson.build  spycommon.c  spycommon.h  trace.c  trace.h
osx/instruments.xcodeproj/: project.pbxproj
plugins/: meson.build
plugins/tracers/: Makefile.am  gstinstruments.c  gstinstruments.h  meson.build
tools/: Makefile.am  formatters.c  formatters.h  gst-report.c  gst-top.c  meson.build
ui/: Makefile  Makefile.am  graph.vala  main.vala  mainmenu.vala  mainwindow.vala  meson.build  timeline.vala
ui/gtk/: main.vala  mainmenu.vala  mainwindow.vala  meson.build  timeline.vala
ui/macos/: AppDelegate.swift  ContentView.swift  meson.build
